--- a/WolvenKit/Views/HomePage/Pages/AboutPageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/AboutPageView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.HomePage.Pages.AboutPageView"
+<catel:UserControl x:Class="WolvenKit.Views.HomePage.Pages.AboutPageView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com"
@@ -233,9 +233,9 @@
                                 </StackPanel>
 
                                 <StackPanel Margin="15" Orientation="Horizontal">
-                                    <hc:Shield Margin="5" Subject="Version" Status="VERSION" Color="{DynamicResource MahApps.Brushes.Accent}"/>
-                                    <hc:Shield Margin="5" Subject="Last Update" Status="DATE" Color="{DynamicResource MahApps.Brushes.Accent}"/>
-                                    <hc:Shield Subject="GitHub" Status="Click Me" Margin="5" Color="{DynamicResource MahApps.Brushes.Accent}"/>
+                                    <hc:Shield Margin="5" Subject="Version" Status="0.8.1" Color="{DynamicResource MahApps.Brushes.Accent}"/>
+                                    <hc:Shield Margin="5" Subject="Last Update" Status="TBD" Color="{DynamicResource MahApps.Brushes.Accent}"/>
+                                    
                                 </StackPanel>                           
 
                             </StackPanel>
@@ -260,24 +260,18 @@
 
                                 <hc:ScrollViewer Margin="0,50,0,0">
                                     <UniformGrid Margin="15" >
-                                        <StackPanel Orientation="Vertical">
-                                            <TextBlock HorizontalAlignment="Left" Margin="0" Text="Project Management"/>
-                                            <hc:TagContainer  Name="Container1" Margin="11"  Padding="5">
-
-                                                <hc:Tag Margin="5" ShowCloseButton="False" Content="Traderain">
-                                                    <hc:Tag.Header>
-                                                        <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="Account" Spin="False" SpinAutoReverse="False" Height="15" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0,0,0,0" HorizontalAlignment="Center"  VerticalAlignment="Top" />
-
-                                                    </hc:Tag.Header>
-                                                </hc:Tag>
-                                            </hc:TagContainer>
-                                        </StackPanel>
+                                    
 
                                         <StackPanel Orientation="Vertical">
                                             <TextBlock HorizontalAlignment="Left" Margin="0" Text="Core Development"/>
                                             <hc:TagContainer   Margin="11"  Padding="5">
+                                                    <hc:Tag Margin="5" ShowCloseButton="False" Content="Traderain">
+                                                        <hc:Tag.Header>
+                                                            <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="Account" Spin="False" SpinAutoReverse="False" Height="15" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0,0,0,0" HorizontalAlignment="Center"  VerticalAlignment="Top" />
 
-                                                <hc:Tag Margin="5" ShowCloseButton="False" Content="Traderain">
+                                                        </hc:Tag.Header>
+                                                    </hc:Tag>
+                                                    <hc:Tag Margin="5" ShowCloseButton="False" Content="Traderain">
                                                     <hc:Tag.Header>
                                                         <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="Account" Spin="False" SpinAutoReverse="False" Height="15" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0,0,0,0" HorizontalAlignment="Center"  VerticalAlignment="Top" />
                                                     </hc:Tag.Header>
@@ -289,12 +283,7 @@
                                                     </hc:Tag.Header>
                                                 </hc:Tag>
 
-                                            </hc:TagContainer>
-                                        </StackPanel>
-
-                                        <StackPanel Orientation="Vertical">
-                                            <TextBlock HorizontalAlignment="Left" Margin="0" Text="Rendering"/>
-                                            <hc:TagContainer   Margin="11"  Padding="5">
+                                
 
                                                 <hc:Tag Margin="5" ShowCloseButton="False" Content="michaelpolakatwork">
                                                     <hc:Tag.Header>
@@ -302,14 +291,14 @@
                                                     </hc:Tag.Header>
                                                 </hc:Tag>
 
-                                            </hc:TagContainer>
-                                        </StackPanel>
 
-                                        <StackPanel Orientation="Vertical">
-                                            <TextBlock HorizontalAlignment="Left" Margin="0" Text="Development"/>
-                                            <hc:TagContainer   Margin="11"  Padding="5">
+                                                    <hc:Tag Margin="5" ShowCloseButton="False" Content="Nightmarae">
+                                                        <hc:Tag.Header>
+                                                            <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="Account" Spin="False" SpinAutoReverse="False" Height="15" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0,0,0,0" HorizontalAlignment="Center"  VerticalAlignment="Top" />
+                                                        </hc:Tag.Header>
+                                                    </hc:Tag>
 
-                                                <hc:Tag Margin="5" ShowCloseButton="False" Content="Maxzor">
+                                                    <hc:Tag Margin="5" ShowCloseButton="False" Content="Maxzor">
                                                     <hc:Tag.Header>
                                                         <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="Account" Spin="False" SpinAutoReverse="False" Height="15" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0,0,0,0" HorizontalAlignment="Center"  VerticalAlignment="Top" />
                                                     </hc:Tag.Header>
