--- a/WolvenKit/Views/HomePage/Pages/RecentProjectView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/RecentProjectView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.HomePage.Pages.RecentProjectView"
+<catel:UserControl x:Class="WolvenKit.Views.HomePage.Pages.RecentProjectView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com"
@@ -112,9 +112,8 @@
     <Grid hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}"  Background="{DynamicResource MahApps.Brushes.ThemeBackground}"  >
 
             <Grid Margin="3,75,3,0">
-            <StackPanel Orientation="Vertical">
-                <hc:TransitioningContentControl Margin="0,5,0,0">
-                    <hc:CoverView  ShowContent="False" BorderBrush="{x:Null}"  Grid.RowSpan="1" ItemContentHeight="55" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Margin="5,5,5,5" BorderThickness="1,1,1,1" ItemMargin="15,8,15,8" ItemHeight="200" ItemWidth="350">
+                <hc:TransitioningContentControl   Margin="0,0,0,0">
+                    <hc:CoverView                        ItemsSource="{Binding FancyProjects}"  ShowContent="False" BorderBrush="{x:Null}"  Grid.RowSpan="1" ItemContentHeight="55" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Margin="15" BorderThickness="1,1,1,1" ItemMargin="15,8,15,8" ItemHeight="240" ItemWidth="350">
 
                         <hc:CoverView.ItemHeaderTemplate>
                             <DataTemplate>
@@ -123,17 +122,15 @@
                                         <Border Background="{DynamicResource Fluent.Ribbon.Brushes.BackstageTabControl.ItemsPanelBackground}" CornerRadius="15,2,2,2">
                                             <hc:Tag  Height="40" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Background="{x:Null}"  MinWidth="350" MaxWidth="350" Margin="3" ShowCloseButton="False">
                                                 <hc:Tag.Content>
-                                                    <TextBlock HorizontalAlignment="Left" Margin="0,0,0,0" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" FontSize="16"   Text="Project Name"></TextBlock>
+                                                    <TextBlock HorizontalAlignment="Left" Margin="0,0,0,0" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" FontSize="16"   Text="{Binding Path=Name}"></TextBlock>
                                                 </hc:Tag.Content>
                                                 <hc:Tag.Header>
                                                     <Border>
-                                                        <Border.Effect>
-                                                            <hc:GrayScaleEffect/>
-                                                        </Border.Effect>
-                                                        <Image Source="{StaticResource  Fluent.Ribbon.Images.DefaultPlaceholder}">
+
+                                                        <Image Stretch="Fill" Source="{Binding Image}">
                                                             <Image.Effect>
 
-                                                                <hc:BrightnessEffect Brightness="0.3"/>
+                                                                <hc:BrightnessEffect Brightness="0.9"/>
                                                             </Image.Effect>
                                                         </Image>
                                                     </Border>
@@ -152,30 +149,53 @@
                                                     <hc:Divider Margin="5,15" LineStroke="{DynamicResource MahApps.Brushes.Accent3}" LineStrokeThickness="2" Width="15"/>
 
                                                     <Border VerticalAlignment="Center" Height="25" Background="{DynamicResource Fluent.Ribbon.Brushes.BackstageTabControl.ItemsPanelBackground}" CornerRadius="5,2,2,2">
-                                                        <TextBlock Width="280" Margin="5" VerticalAlignment="Center"  Text="Project Type : "/>
+                                                        <StackPanel Orientation="Horizontal">
+                                                            <TextBlock Width="74" Margin="5" VerticalAlignment="Center"  Text="Project Type : "/>
+                                                            <TextBlock Width="280" Margin="5" VerticalAlignment="Center"  Text="{Binding Type}"/>
+
+                                                        </StackPanel>
                                                     </Border>
 
                                                 </StackPanel>
                                                 <StackPanel Margin="5" Orientation="Horizontal">
                                                     <hc:Divider Margin="5,15" LineStroke="{DynamicResource MahApps.Brushes.Accent3}" LineStrokeThickness="2" Width="15"/>
                                                     <Border VerticalAlignment="Center" Height="25" Background="{DynamicResource Fluent.Ribbon.Brushes.BackstageTabControl.ItemsPanelBackground}" CornerRadius="5,2,2,2">
-                                                        <TextBlock Width="280" Margin="5" VerticalAlignment="Center"  Text="Last Modified : "/>
+                                                        <StackPanel Orientation="Horizontal">
+                                                            <TextBlock Width="50" Margin="5" VerticalAlignment="Center"  Text="Created : "/>
+                                                            <TextBlock Width="280" Margin="5" VerticalAlignment="Center"  Text="{Binding CreationDate}"/>
+
+                                                        </StackPanel>
                                                     </Border>
                                                 </StackPanel>
+
+                                                <StackPanel Margin="5" Orientation="Horizontal">
+                                                    <hc:Divider Margin="5,15" LineStroke="{DynamicResource MahApps.Brushes.Accent3}" LineStrokeThickness="2" Width="15"/>
+                                                    <Border VerticalAlignment="Center" Height="25" Background="{DynamicResource Fluent.Ribbon.Brushes.BackstageTabControl.ItemsPanelBackground}" CornerRadius="5,2,2,2">
+                                                        <StackPanel Orientation="Horizontal">
+                                                            <TextBlock Width="30" Margin="5" VerticalAlignment="Center"  Text="Path : "/>
+                                                            <TextBlock Width="280" Margin="5" VerticalAlignment="Center"  Text="{Binding ProjectPath}"/>
+
+                                                        </StackPanel>
+                                                    </Border>
+                                                </StackPanel>
+
 
                                             </StackPanel>
 
                                             <StackPanel HorizontalAlignment="Right" VerticalAlignment="Bottom" Orientation="Horizontal" Margin="15">
-                                                <Button Height="35"  HorizontalAlignment="Left">
-                                                    <iconPacks:PackIconCodicons Kind="Edit"></iconPacks:PackIconCodicons>
+                                                <Button Height="35"  HorizontalAlignment="Left"  Command="{catel:CommandManagerBinding Application.OpenProject}"
+                                                     CommandParameter="{Binding ProjectPath}">
+                                                    <iconPacks:PackIconCodicons Kind="Edit" ></iconPacks:PackIconCodicons>
                                                 </Button>
                                                 <hc:Divider LineStrokeThickness="2" LineStroke="{DynamicResource MahApps.Brushes.Accent3}" Orientation="Vertical" MaxHeight="16"/>
-                                                <Button Height="35"  HorizontalAlignment="Left">
-                                                    <iconPacks:PackIconCodicons Kind="FolderOpened"></iconPacks:PackIconCodicons>
+                                                <Button    Command="{Binding ElementName=topGrid, Path=DataContext.OpenInExplorer}"
+                                                             CommandParameter="{Binding ProjectPath}"   Height="35"  HorizontalAlignment="Left">
+                                                    <iconPacks:PackIconCodicons Kind="FolderOpened" ></iconPacks:PackIconCodicons>
 
                                                 </Button>
                                                 <hc:Divider LineStrokeThickness="2" LineStroke="{DynamicResource MahApps.Brushes.Accent3}" Orientation="Vertical" MaxHeight="16"/>
-                                                <Button Height="35"  HorizontalAlignment="Left">
+                                                <Button  Command="{catel:CommandManagerBinding Application.DeleteProject}"
+                                                     CommandParameter="{Binding ProjectPath}" Height="35"  HorizontalAlignment="Left">
                                                     <iconPacks:PackIconCodicons Kind="Trash"></iconPacks:PackIconCodicons>
 
                                                 </Button>
@@ -190,18 +210,9 @@
                             </DataTemplate>
 
                         </hc:CoverView.ItemHeaderTemplate>
-                        <hc:CoverViewItem ></hc:CoverViewItem>
-                        <hc:CoverViewItem ></hc:CoverViewItem>
-                        <hc:CoverViewItem ></hc:CoverViewItem>
-                        <hc:CoverViewItem ></hc:CoverViewItem>
-                        <hc:CoverViewItem ></hc:CoverViewItem>
-                        <hc:CoverViewItem ></hc:CoverViewItem>
-                        <hc:CoverViewItem ></hc:CoverViewItem>
-                        <hc:CoverViewItem ></hc:CoverViewItem>
-                        <hc:CoverViewItem ></hc:CoverViewItem>
+
                     </hc:CoverView>
                 </hc:TransitioningContentControl>
-            </StackPanel>
         </Grid>
 
         <hc:TransitioningContentControl TransitionMode="Right2LeftWithFade">
