--- a/WolvenKit/Views/MainView.xaml
+++ b/WolvenKit/Views/MainView.xaml
@@ -20,11 +20,22 @@
                    xmlns:csveditor="clr-namespace:WolvenKit.Views.CsvEditor"
                    xmlns:codeeditorz="clr-namespace:WolvenKit.Views.CodeEditor"
                    xmlns:bulkeditor="clr-namespace:WolvenKit.Views.BulkEditor"
-                   xmlns:cr2weditor="clr-namespace:WolvenKit.Views.Editors.CR2WEditor"
+                               xmlns:o="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
+                   xmlns:cr2weditor="clr-namespace:WolvenKit.Views.Editors.CR2WEditor" xmlns:hc="https://handyorg.github.io/handycontrol"
                    IsVisibleChanged="UserControl_IsVisibleChanged_1"
                    >
 
-    <Grid
+
+    <catel:UserControl.Resources>
+        <DrawingBrush o:Freeze="True"   Opacity=".02" x:Key="CloudDrawingBrushMain" RenderOptions.CacheInvalidationThresholdMinimum="0.5" RenderOptions.CacheInvalidationThresholdMaximum="2.0" RenderOptions.CachingHint="Cache"  Viewport="0,0,90,90" ViewportUnits="Absolute" Stretch="Uniform"  TileMode="Tile">
+            <DrawingBrush.Drawing>
+                <ImageDrawing o:Freeze="True"   ImageSource="pack://application:,,,/Resources/Icons/SeeTroughIcon.png" Rect="0,0,70,80"/>
+            </DrawingBrush.Drawing>
+        </DrawingBrush>
+    </catel:UserControl.Resources>
+
+        <Grid  Background="{DynamicResource CloudDrawingBrushMain}"
+
         xmlns:conv="clr-namespace:WolvenKit.Layout.Converters">
         <Grid.Resources>
             <conv:ActiveDocumentConverter x:Key="ActiveDocumentConverter"/>
@@ -35,7 +46,9 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <DockingManager Grid.Row="0"
+        
+
+        <DockingManager Background="Transparent" Grid.Row="0"
                         xmlns:views="clr-namespace:WolvenKit.Views"
                         x:Name="dockManager"
                         ActiveContent="{Binding ActiveDocument, Mode=TwoWay, Converter={StaticResource ActiveDocumentConverter}}"
