--- a/WolvenKit/Views/HomePage/HomePageView.xaml
+++ b/WolvenKit/Views/HomePage/HomePageView.xaml
@@ -52,105 +52,105 @@
         <Grid Effect="{DynamicResource  MahApps.DropShadowEffect.Menu}"  Margin="15,25,15,15" HorizontalAlignment="Left">
 
             <Border CornerRadius="15" Background="{DynamicResource RegionBrush}">
-
-                <hc:SideMenu   x:Name="LeftSideMenu" Margin="0,90,0,15" SideBrush="{DynamicResource MahApps.Brushes.AccentBase}" Background="{DynamicResource MahApps.Brushes.ThemeBackground}"  BorderThickness="0" Width="200" SubSideBrush="{DynamicResource MahApps.Brushes.Accent2}">
-
-
+                <hc:TransitioningContentControl>
+                    <hc:SideMenu   Style="{DynamicResource SideMenuBaseStyle}" ExpandMode="ShowOne"   x:Name="LeftSideMenu" Margin="0,90,0,15" SideBrush="{DynamicResource MahApps.Brushes.AccentBase}" Background="{DynamicResource MahApps.Brushes.ThemeBackground}"  BorderThickness="0" Width="200" SubSideBrush="{DynamicResource MahApps.Brushes.Accent2}">
 
 
 
 
 
 
-                    <hc:SideMenuItem IsSelected="True" x:Name="SideMenu_GetStartedItem" Header="Get Started"  Margin="0,100,0,0" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}">
-                        <hc:SideMenuItem.Icon>
-                            <iconPacks:Codicons Height="25" Kind="Tools" Width="25"/>
-                        </hc:SideMenuItem.Icon>
 
-                        <hc:SideMenuItem x:Name="SideMenu_WelcomeItem" Header="Welcome" IsSelected="True"  Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Selected="SideMenu_WelcomeItem_Selected">
+
+                        <hc:SideMenuItem DataContext="{Binding ElementName=LeftSideMenu}" IsSelected="True" x:Name="SideMenu_GetStartedItem" Header="Get Started"  Margin="0,100,0,0" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}">
                             <hc:SideMenuItem.Icon>
-                                <iconPacks:Codicons Height="15" Kind="Pinned" Width="15"/>
+                                <iconPacks:Codicons Height="25" Kind="Tools" Width="25"/>
+                            </hc:SideMenuItem.Icon>
+
+                            <hc:SideMenuItem x:Name="SideMenu_WelcomeItem" Header="Welcome" IsSelected="True"  Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Selected="SideMenu_WelcomeItem_Selected">
+                                <hc:SideMenuItem.Icon>
+                                    <iconPacks:Codicons Height="15" Kind="Pinned" Width="15"/>
+                                </hc:SideMenuItem.Icon>
+                            </hc:SideMenuItem>
+
+
+                        </hc:SideMenuItem>
+
+                        <hc:SideMenuItem Header="Project" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}">
+                            <hc:SideMenuItem.Icon>
+                                <iconPacks:Codicons Height="25" Kind="Repo" Width="25"/>
+                            </hc:SideMenuItem.Icon>
+                            <hc:SideMenuItem x:Name="SideMenu_OpenRecentProjectItem" Header="Open Recent Project"  Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Selected="SideMenu_OpenRecentProjectItem_Selected">
+                                <hc:SideMenuItem.Icon>
+                                    <iconPacks:Codicons Height="13" Kind="GoToFile" Width="13"/>
+                                </hc:SideMenuItem.Icon>
+                            </hc:SideMenuItem>
+
+                        </hc:SideMenuItem>
+
+                        <hc:SideMenuItem x:Name="SideMenu_IntegratedItem" Header="Integrated Tools"  Margin="0,0,0,0" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Selected="SideMenu_IntegratedItem_Selected" >
+                            <hc:SideMenuItem.Icon>
+                                <iconPacks:Codicons Height="25" Kind="Verified" Width="25" />
                             </hc:SideMenuItem.Icon>
                         </hc:SideMenuItem>
 
 
-                    </hc:SideMenuItem>
 
-                    <hc:SideMenuItem Header="Project" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}">
-                        <hc:SideMenuItem.Icon>
-                            <iconPacks:Codicons Height="25" Kind="Repo" Width="25"/>
-                        </hc:SideMenuItem.Icon>
-                        <hc:SideMenuItem x:Name="SideMenu_OpenRecentProjectItem" Header="Open Recent Project"  Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Selected="SideMenu_OpenRecentProjectItem_Selected">
+                        <hc:SideMenuItem x:Name="SideMenu_SettingsItem" Header="Settings"  Margin="0,0,0,0" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Selected="SideMenu_SettingsItem_Selected">
                             <hc:SideMenuItem.Icon>
-                                <iconPacks:Codicons Height="13" Kind="GoToFile" Width="13"/>
+                                <iconPacks:Codicons Height="25" Kind="Settings" Width="25" />
                             </hc:SideMenuItem.Icon>
                         </hc:SideMenuItem>
 
-                    </hc:SideMenuItem>
-
-                    <hc:SideMenuItem x:Name="SideMenu_IntegratedItem" Header="Integrated Tools"  Margin="0,0,0,0" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Selected="SideMenu_IntegratedItem_Selected" >
-                        <hc:SideMenuItem.Icon>
-                            <iconPacks:Codicons Height="25" Kind="Verified" Width="25" />
-                        </hc:SideMenuItem.Icon>
-                    </hc:SideMenuItem>
-
-
-
-                    <hc:SideMenuItem x:Name="SideMenu_SettingsItem" Header="Settings"  Margin="0,0,0,0" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Selected="SideMenu_SettingsItem_Selected">
-                        <hc:SideMenuItem.Icon>
-                            <iconPacks:Codicons Height="25" Kind="Settings" Width="25" />
-                        </hc:SideMenuItem.Icon>
-                    </hc:SideMenuItem>
-
-                    <hc:SideMenuItem IsSelected="False" x:Name="SideMenu_UserItem" Header="Account"  Margin="0,0,0,0" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Selected="SideMenu_UserItem_Selected">
-                        <hc:SideMenuItem.Icon>
-                            <iconPacks:Codicons Height="25" Kind="Account" Width="25"/>
-                        </hc:SideMenuItem.Icon>
-                    </hc:SideMenuItem>
-
-                    <hc:SideMenuItem x:Name="SideMenu_InformationItem" Header="Information" Margin="0,0,0,0" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}">
-                        <hc:SideMenuItem.Icon>
-                            <iconPacks:Codicons Height="25" Kind="Info" Width="25" />
-                        </hc:SideMenuItem.Icon>
-
-                        <hc:SideMenuItem x:Name="SideMenu_WikiItem" Header="Wiki" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Selected="SideMenu_WikiItem_Selected">
+                        <hc:SideMenuItem IsSelected="False" x:Name="SideMenu_UserItem" Header="Account"  Margin="0,0,0,0" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Selected="SideMenu_UserItem_Selected">
                             <hc:SideMenuItem.Icon>
-                                <iconPacks:PackIconBoxIcons Height="13" Kind="LogosWikipedia" Width="13" HorizontalAlignment="Center"/>
+                                <iconPacks:Codicons Height="25" Kind="Account" Width="25"/>
                             </hc:SideMenuItem.Icon>
                         </hc:SideMenuItem>
-                        <hc:SideMenuItem x:Name="SideMenu_GitHubItem" Header="Github"  Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Selected="SideMenu_GitHubItem_Selected">
+
+                        <hc:SideMenuItem x:Name="SideMenu_InformationItem" Header="Information" Margin="0,0,0,0" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}">
                             <hc:SideMenuItem.Icon>
-                                <iconPacks:PackIconBoxIcons Height="13" Kind="LogosGithub" Width="16" HorizontalAlignment="Center"/>
+                                <iconPacks:Codicons Height="25" Kind="Info" Width="25" />
+                            </hc:SideMenuItem.Icon>
+
+                            <hc:SideMenuItem x:Name="SideMenu_WikiItem" Header="Wiki" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Selected="SideMenu_WikiItem_Selected">
+                                <hc:SideMenuItem.Icon>
+                                    <iconPacks:PackIconBoxIcons Height="13" Kind="LogosWikipedia" Width="13" HorizontalAlignment="Center"/>
+                                </hc:SideMenuItem.Icon>
+                            </hc:SideMenuItem>
+                            <hc:SideMenuItem x:Name="SideMenu_GitHubItem" Header="Github"  Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Selected="SideMenu_GitHubItem_Selected">
+                                <hc:SideMenuItem.Icon>
+                                    <iconPacks:PackIconBoxIcons Height="13" Kind="LogosGithub" Width="16" HorizontalAlignment="Center"/>
+                                </hc:SideMenuItem.Icon>
+                            </hc:SideMenuItem>
+                            <hc:SideMenuItem Visibility="Collapsed" Header="SDK"  Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}">
+                                <hc:SideMenuItem.Icon>
+                                    <iconPacks:PackIconBoxIcons Height="13" Kind="RegularPackage" Width="13" HorizontalAlignment="Center"/>
+                                </hc:SideMenuItem.Icon>
+                            </hc:SideMenuItem>
+                            <hc:SideMenuItem x:Name="SideMenu_AboutItem" Header="About"  Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Selected="SideMenu_AboutItem_Selected">
+                                <hc:SideMenuItem.Icon>
+                                    <iconPacks:PackIconBoxIcons Height="13" Kind="RegularInfoCircle" Width="13" HorizontalAlignment="Center"/>
+                                </hc:SideMenuItem.Icon>
+                            </hc:SideMenuItem>
+                            <hc:SideMenuItem x:Name="SideMenu_WebsiteItem" Header="Website"  Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Selected="SideMenu_WebsiteItem_Selected" >
+                                <hc:SideMenuItem.Icon>
+                                    <iconPacks:PackIconCodicons Height="13" Kind="Cloud" Width="13" HorizontalAlignment="Center"/>
+                                </hc:SideMenuItem.Icon>
+                            </hc:SideMenuItem>
+
+
+
+                        </hc:SideMenuItem>
+
+
+                        <hc:SideMenuItem IsSelected="False" Visibility="Hidden" x:Name="SideMenu_DebugItem" Header="DEBUG"  Margin="0,30,0,0" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Selected="SideMenu_DebugItem_Selected">
+                            <hc:SideMenuItem.Icon>
+                                <iconPacks:Codicons Height="25" Kind="Debug" Width="25"/>
                             </hc:SideMenuItem.Icon>
                         </hc:SideMenuItem>
-                        <hc:SideMenuItem Visibility="Collapsed" Header="SDK"  Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}">
-                            <hc:SideMenuItem.Icon>
-                                <iconPacks:PackIconBoxIcons Height="13" Kind="RegularPackage" Width="13" HorizontalAlignment="Center"/>
-                            </hc:SideMenuItem.Icon>
-                        </hc:SideMenuItem>
-                        <hc:SideMenuItem x:Name="SideMenu_AboutItem" Header="About"  Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Selected="SideMenu_AboutItem_Selected">
-                            <hc:SideMenuItem.Icon>
-                                <iconPacks:PackIconBoxIcons Height="13" Kind="RegularInfoCircle" Width="13" HorizontalAlignment="Center"/>
-                            </hc:SideMenuItem.Icon>
-                        </hc:SideMenuItem>
-                        <hc:SideMenuItem x:Name="SideMenu_WebsiteItem" Header="Website"  Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Selected="SideMenu_WebsiteItem_Selected" >
-                            <hc:SideMenuItem.Icon>
-                                <iconPacks:PackIconCodicons Height="13" Kind="Cloud" Width="13" HorizontalAlignment="Center"/>
-                            </hc:SideMenuItem.Icon>
-                        </hc:SideMenuItem>                        
-                        
-                        
-
-                    </hc:SideMenuItem>
-
-
-                    <hc:SideMenuItem IsSelected="False" Visibility="Hidden" x:Name="SideMenu_DebugItem" Header="DEBUG"  Margin="0,30,0,0" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Selected="SideMenu_DebugItem_Selected">
-                        <hc:SideMenuItem.Icon>
-                            <iconPacks:Codicons Height="25" Kind="Debug" Width="25"/>
-                        </hc:SideMenuItem.Icon>
-                    </hc:SideMenuItem>
-                </hc:SideMenu>
-
+                    </hc:SideMenu>
+                </hc:TransitioningContentControl>
             </Border>
             <Fluent:Button  Height="39"
                             VerticalAlignment="Bottom"
