--- a/WolvenKit/Views/SettingsPages/EditorSettingsView.xaml
+++ b/WolvenKit/Views/SettingsPages/EditorSettingsView.xaml
@@ -1,10 +1,10 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.SettingsPages.EditorSettingsView"
+<catel:UserControl x:Class="WolvenKit.Views.SettingsPages.EditorSettingsView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol" IsVisibleChanged="UserControl_IsVisibleChanged">
 
     <Grid hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}">
-        <hc:SideMenu Width="150" SideBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Left" >
+        <hc:SideMenu ExpandMode="ShowOne" Width="150" SideBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Left" >
 
             <hc:SideMenuItem x:Name="GeneralSubItem" Selected="GeneralSubItem_Selected" >
                 <hc:SideMenuItem.Header>
