--- a/WolvenKit/Views/DocumentView.xaml
+++ b/WolvenKit/Views/DocumentView.xaml
@@ -1,23 +1,23 @@
 <catel:UserControl
-	x:Class="WolvenKit.Views.DocumentView"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:WolvenKit.Views.Dialogs"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-	xmlns:behavior="clr-namespace:WolvenKit.Behavior"
-	xmlns:catel="http://schemas.catelproject.com"
-	xmlns:model="clr-namespace:WolvenKit.Model"
-	xmlns:ei="http://schemas.microsoft.com/xaml/behaviors"
-	xmlns:cmodel="clr-namespace:WolvenKit.Common.Model"
-	xmlns:types="clr-namespace:WolvenKit.Common.Model.Cr2w;assembly=WolvenKit.Common"
-	xmlns:cr2W="clr-namespace:WolvenKit.CR2W;assembly=WolvenKit.CR2W"
+    x:Class="WolvenKit.Views.DocumentView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:WolvenKit.Views.Dialogs"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+    xmlns:behavior="clr-namespace:WolvenKit.Behavior"
+    xmlns:catel="http://schemas.catelproject.com"
+    xmlns:model="clr-namespace:WolvenKit.Model"
+    xmlns:ei="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:cmodel="clr-namespace:WolvenKit.Common.Model"
+    xmlns:types="clr-namespace:WolvenKit.Common.Model.Cr2w;assembly=WolvenKit.Common"
+    xmlns:cr2W="clr-namespace:WolvenKit.CR2W;assembly=WolvenKit.CR2W"
     xmlns:conv="clr-namespace:WolvenKit.Layout.Converters"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     d:DesignHeight="450"
-	d:DesignWidth="800"
-	mc:Ignorable="d" IsVisibleChanged="UserControl_IsVisibleChanged">
+    d:DesignWidth="800"
+    mc:Ignorable="d" IsVisibleChanged="UserControl_IsVisibleChanged">
     <catel:UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -31,8 +31,8 @@
         <Grid.Resources>
             <conv:ExtensionToImageConverter x:Key="ExtensionToImageConverter"/>
         </Grid.Resources>
-        <Grid.ColumnDefinitions>  
-            <ColumnDefinition Width="308"/>            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="308"/>
             <ColumnDefinition Width="5"/>
             <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
@@ -84,7 +84,7 @@
                     </TreeView>
                 </hc:TabItem>
 
-                <hc:TabItem  Header="IMPORTS">
+                <hc:TabItem Width="75" Header="IMPORTS">
                     <ListView ItemsSource="{Binding Imports}" Margin="20">
                         <hc:Interaction.Triggers>
                             <hc:EventTrigger EventName="MouseDoubleClick">
@@ -100,7 +100,7 @@
                     </ListView>
                 </hc:TabItem>
 
-                <hc:TabItem Header="BUFFERS">
+                <hc:TabItem Width="75" Header="BUFFERS">
                     <ListView ItemsSource="{Binding Buffers}">
                         <hc:Interaction.Triggers>
                             <hc:EventTrigger EventName="MouseDoubleClick">
@@ -116,7 +116,7 @@
                     </ListView>
                 </hc:TabItem>
 
-                <hc:TabItem Header="EDITORS">
+                <hc:TabItem Width="75" Header="EDITORS">
                     <ListView ItemsSource="{Binding Editors}" >
                         <hc:Interaction.Triggers>
                             <hc:EventTrigger EventName="MouseDoubleClick">
