--- a/WolvenKit/Views/ImportView.xaml
+++ b/WolvenKit/Views/ImportView.xaml
@@ -43,13 +43,13 @@
                     <Separator/>
                     
                     <MenuItem Header="Actions">
-                        <MenuItem Header="Add all Dependencies" Command="{Binding AddAllCommand}"/>
-                        <MenuItem Header="Fast Render" Command="{Binding FastRenderCommand}"/>
+                        <MenuItem Header="Add all dependencies" Command="{Binding AddAllCommand}"/>
+                        <MenuItem Header="Fast render" Command="{Binding FastRenderCommand}"/>
                     </MenuItem>
 
                     <MenuItem Header="Export">
                         <MenuItem Header="Export with WCC" Command="{Binding ExportMeshCommand}"/>
-                        <MenuItem Header="Export to Json" Command="{Binding ExportJsonCommand}"/>
+                        <MenuItem Header="Export to JSON" Command="{Binding ExportJsonCommand}"/>
                     </MenuItem>
 
                     <Separator/>
@@ -58,12 +58,12 @@
                     <MenuItem Header="Delete" Command="{Binding DeleteFileCommand}"/>
                     <MenuItem Header="Rename" Command="{Binding RenameFileCommand}"/>
                     <Separator/>
-                    <MenuItem Header="Copy Relative Path" Command="{Binding CopyRelPathCommand}"/>
+                    <MenuItem Header="Copy relative path" Command="{Binding CopyRelPathCommand}"/>
                     <MenuItem Header="Open in File Explorer" Command="{Binding OpenInFileExplorerCommand}"/>
-                    <MenuItem Header="Open in Asset Browser Explorer" Command="{Binding OpenInAssetBrowserCommand}"/>
+                    <MenuItem Header="Open in asset browser" Command="{Binding OpenInAssetBrowserCommand}"/>
                     <Separator/>
-                    <MenuItem Header="Expand Children" Command="{Binding ExpandCommand}"/>
-                    <MenuItem Header="Collapse Children" Command="{Binding CollapseCommand}"/>
+                    <MenuItem Header="Expand children" Command="{Binding ExpandCommand}"/>
+                    <MenuItem Header="Collapse children" Command="{Binding CollapseCommand}"/>
                     <Separator/>
                     
                 </ContextMenu>
