Open WEM files in Audio Player WIP (Need some assistance using test.exe) Added search bar in design for project explorer . (QOL Change that I would love to see)

--- a/WolvenKit/Views/ProjectExplorerView.xaml
+++ b/WolvenKit/Views/ProjectExplorerView.xaml
@@ -30,7 +30,13 @@
             <conv:ExtensionToImageConverter x:Key="ExtensionToImageConverter"/>
         </Grid.Resources>
 
-        <TreeView  Style="{DynamicResource TreeView}" Name="TreeView" 
+
+        <Grid VerticalAlignment="Top">
+            <hc:SearchBar Margin="3"></hc:SearchBar>
+        </Grid>
+        
+
+        <TreeView BorderBrush="Transparent" Margin="0,33,0,0" Style="{DynamicResource TreeView}" Name="TreeView" 
                              ItemsSource="{Binding Treenodes}"
                              
                              >
