--- a/WolvenKit/Views/ProjectExplorerView.xaml
+++ b/WolvenKit/Views/ProjectExplorerView.xaml
@@ -11,7 +11,7 @@
              xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
                                       xmlns:hc="https://handyorg.github.io/handycontrol"
 
-             xmlns:behavior="clr-namespace:WolvenKit.Behavior" xmlns:i1="http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:behavior="clr-namespace:WolvenKit.Functionality.Behavior" xmlns:i1="http://schemas.microsoft.com/xaml/behaviors"
                    mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" IsVisibleChanged="UserControl_IsVisibleChanged">
 
