--- a/WolvenKit/MVVM/Views/Shell/Backstage/OpenFileView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/Backstage/OpenFileView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.OpenFileView"
+<catel:UserControl x:Class="WolvenKit.Views.OpenFileView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -39,7 +39,7 @@
                 </orchestra:RibbonBackstageTabItem>
 
                 <orchestra:RibbonBackstageTabItem HeaderText="Computer" 
-                                                  Icon="{orctheming:FontImage {x:Static global:FontAwesome.FolderO}, FontFamily=FontAwesome}">
+                                                  Icon="{StaticResource Fluent.Ribbon.Images.DefaultPlaceholder}">
                     <orchestra:RibbonBackstageTabItem.HeaderTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
