--- a/WolvenKit/MVVM/Views/Shell/Editor/ProjectExplorerView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/Editor/ProjectExplorerView.xaml
@@ -25,7 +25,7 @@
     </catel:UserControl.Resources>
     
     <Grid hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}"
-        xmlns:conv="clr-namespace:WolvenKit.Layout.Converters">
+        xmlns:conv="clr-namespace:WolvenKit.Functionality.Layout.Converters">
         <Grid.Resources>
             <conv:ExtensionToImageConverter x:Key="ExtensionToImageConverter"/>
         </Grid.Resources>
