--- a/WolvenKit/MVVM/Views/Shell/Editor/ImportView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/Editor/ImportView.xaml
@@ -22,7 +22,7 @@
         </ResourceDictionary>
     </catel:UserControl.Resources>
     <Grid
-        xmlns:conv="clr-namespace:WolvenKit.Layout.Converters">
+        xmlns:conv="clr-namespace:WolvenKit.Functionality.Layout.Converters">
         <Grid.Resources>
             <conv:ExtensionToImageConverter x:Key="ExtensionToImageConverter"/>
         </Grid.Resources>
